# rivia

./: .gitignore  CLAUDE.md  CREDITS  LICENSE  NOTICE  README.md  api_strategy.md  build_tool.bat  pyproject.toml  test1.py
docs/: channel_modification.md  cln.bat  conf.py  export_raster2_plan.md  index.rst  rasprocess_render_mode_limitation.md  store_map_execution.md  terrain_export.md
docs/_templates/autosummary/: class.rst  module.rst
docs/api/: com.rst  controller.rst  geo.rst  hdf.rst  model.rst  utils.rst
docs/dev/: changelog.md  contributing.md  sphinx_warnings_debug.md
docs/guide/: installation.md  introduction.md  quickstart.md  readdata.md
src/raspy/: __init__.py
src/raspy/com/: __init__.py  _geometry.py  _runtime.py  _ver400.py  _ver500.py  _ver503.py  controller.py  ras.py  registry.py
src/raspy/controller/: __init__.py
src/raspy/geo/: __init__.py  _rasmap.py  raster.py
src/raspy/geometry/: __init__.py
src/raspy/hdf/: __init__.py  _base.py  _geometry.py  _plan.py  _plan.py.tmp.87700.1772566710340  _terrain.py  _velocity.py
src/raspy/model/: __init__.py  _dss.py  _mapper.py  flow_steady.py  flow_unsteady.py  geometry.py  plan.py  project.py
src/raspy/utils/: __init__.py  fs.py  helpers.py
src/rivia/: __init__.py  _version.py
src/rivia/com/: _runtime.py  _ver400.py  _ver500.py  _ver503.py  controller.py
src/rivia/controller/: __init__.py  _geometry.py  _runtime.py  _ver400.py  _ver500.py  _ver503.py  controller.py  ras.py
src/rivia/geo/: __init__.py  _rasmap.py  _rasmapper_pipeline.py  mesh_validation.py  profile.py  raster.py
src/rivia/hdf/: __init__.py  _base.py  _geometry.py  _plan.py  _steady_plan.py  _unsteady_plan.py  _velocity.py  geometry.py  log.py  staleness.py  steady_plan.py  terrain.py  unsteady_plan.py  velocity.py
src/rivia/model/: __init__.py  _dss.py  _mapper.py  flow_steady.py  flow_unsteady.py  geometry.py  plan.py  project.py  steady_flow.py  unsteady_flow.py
src/rivia/utils/: __init__.py  fs.py  helpers.py
tests/: test_raspy.py  test_rivia.py
tests/com/: test_registry.py
tests/controller/: test_registry.py
tests/geo/: test_rasmap.py  test_raster.py
tests/hdf/: conftest.py  test_base.py  test_geometry.py  test_plan.py  test_velocity.py
tests/model/: test_geometry_file.py  test_plan.py  test_steady_flow_file.py  test_unsteady_flow_file.py
tests/model/fixtures/: baxter.f01  baxter_1d.u01  baxter_steady.p01  mixed.f01  muncie_unsteady2d_v510.p03  qmin_qmult.u01
tools/RasMapperStoreMap/: Program.cs  RasMapperStoreMap.csproj
