[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raspy"
version = "0.1.0"
description = "A modern Python interface for HEC-RAS hydraulic modeling software"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Gyan Basyal" },
    { name = "WEST Consultants, Inc.", email = "info@westconsultants.com" },
]
keywords = ["hec-ras", "hydraulics", "hydrology", "modeling", "water-resources"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "h5py",
    "pywin32",
    "psutil",
    "pydantic>=2",
]

[project.optional-dependencies]
geo = [
    "geopandas",
    "rasterio",
    "matplotlib",
    "numba",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "build",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-autodoc-typehints",
    "myst-parser",
]

[project.urls]
Homepage = "https://github.com/gyanz/raspy"
Repository = "https://github.com/gyanz/raspy"
Issues = "https://github.com/gyanz/raspy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
raspy = ["bin/*.exe"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"
